Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    iis_better(restaurant['rating'], alternative['rating'])\n",
+    "    if is_better(restaurant['rating'], alternative['rating'])\n",
     "    "
    ]
   },
