--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,8 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if is_better(restaurant['rating'], alternative['rating'])\n",
+    "    if is_better(restaurant['rating'], alternative['rating']):\n",
+    "        return\n",
     "    "
    ]
   },
