Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -337,7 +337,7 @@
     "def is_better(restaurant, alternative):\n",
     "    if is_better(restaurant['rating'], alternative['rating']):\n",
     "        return restaurant['rating']\n",
-    "    elif is_better(alternative)\n",
+    "    elif is_better(alternative['rating'], )\n",
     "    "
    ]
   },
