Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -338,7 +338,8 @@
     "    if is_better(restaurant['rating'], alternative['rating']):\n",
     "        return restaurant['rating']\n",
     "    elif is_better(alternative['rating'], restaurant['rating']):\n",
-    "        return \n",
+    "        return alternative['rating']\n",
+    "    e\n",
     "    "
    ]
   },
