--- a/index.ipynb
+++ b/index.ipynb
@@ -337,9 +337,10 @@
     "def is_better(restaurant, alternative):\n",
     "    if is_better(restaurant['rating'], alternative['rating']):\n",
     "        return restaurant['rating']\n",
-    "    elif is_better(alternative['rating'], restaurant['rating']):\n",
+    "    elif:\n",
+    "        is_better(alternative['rating'], restaurant['rating']):\n",
     "        return alternative['rating']\n",
-    "    e\n",
+    "    else:\n",
     "    "
    ]
   },
