Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -337,8 +337,7 @@
     "def is_better(restaurant, alternative):\n",
     "    if is_better(restaurant['rating'], alternative['rating']):\n",
     "        return restaurant['rating']\n",
-    "    elif:\n",
-    "        is_better(alternative['rating'], restaurant['rating']):\n",
+    "    elifis_better(alternative['rating'], restaurant['rating']):\n",
     "        return alternative['rating']\n",
     "    else:\n",
     "    "
