Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
     "    elif is_better(alternative['rating'], restaurant['rating']):\n",
     "        return alternative['rating']\n",
     "    else:\n",
-    "        \n",
+    "        return False\n",
     "    "
    ]
   },
