--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if restaurant['rating']  alternative['rating']):\n",
+    "    if restaurant['rating'] > alternative['rating']):\n",
     "        return restaurant['rating']\n",
     "    elif is_better(alternative['rating'], restaurant['rating']):\n",
     "        return alternative['rating']\n",
