Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -337,7 +337,7 @@
     "def is_better(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']):\n",
     "        return restaurant['rating']\n",
-    "    elif is_better(alternative['rating'], restaurant['rating']):\n",
+    "    elif alternative['rating'], restaurant['rating']):\n",
     "        return alternative['rating']\n",
     "    else:\n",
     "        return False\n",
