Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -344,7 +344,7 @@
    ],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if restaurant['rating'] > alternative['rating']):\n",
+    "    if restaurant['rating'] > alternative['rating']:\n",
     "        return restaurant['rating']\n",
     "    elif alternative['rating'] > restaurant['rating']):\n",
     "        return alternative['rating']\n",
