--- a/index.ipynb
+++ b/index.ipynb
@@ -425,7 +425,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if restaurant[]"
+    "    if restaurant['price']"
    ]
   },
   {
