Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -426,7 +426,7 @@
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
     "    if len(restaurant['price']) < len(alternative):\n",
-    "        return "
+    "        return True"
    ]
   },
   {
