--- a/index.ipynb
+++ b/index.ipynb
@@ -426,7 +426,9 @@
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
     "    if len(restaurant['price']) < len(alternative):\n",
-    "        return True"
+    "        return True\n",
+    "    else:\n",
+    "        "
    ]
   },
   {
