Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -428,6 +428,7 @@
     "    if len(restaurant['price']) < len(alternative):\n",
     "        return True\n",
     "    else:\n",
+    "        retur\n",
     "        "
    ]
   },
