--- a/index.ipynb
+++ b/index.ipynb
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
     "    if len(restaurant['price']) < len(alternative):\n",
     "        return True\n",
     "    else:\n",
-    "        retur\n",
+    "        return False\n",
     "        "
    ]
   },
