Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -420,12 +420,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if len(restaurant['price']) < len(alternative):\n",
+    "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return True\n",
     "    else:\n",
     "        return False\n",
@@ -434,16 +434,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
