--- a/index.ipynb
+++ b/index.ipynb
@@ -506,7 +506,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if rating  > restaurant['']"
+    "    if rating  > restaurant['rating']"
    ]
   },
   {
