--- a/index.ipynb
+++ b/index.ipynb
@@ -506,7 +506,8 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if rating  > restaurant['rating']"
+    "    if rating  > restaurant['rating']:\n",
+    "        return "
    ]
   },
   {
