--- a/index.ipynb
+++ b/index.ipynb
@@ -507,7 +507,7 @@
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if rating  > restaurant['rating']:\n",
-    "        return "
+    "        return Tr"
    ]
   },
   {
