Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -507,7 +507,8 @@
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if rating  > restaurant['rating']:\n",
-    "        return Tr"
+    "        return True\n",
+    "    else:"
    ]
   },
   {
