--- a/index.ipynb
+++ b/index.ipynb
@@ -508,7 +508,8 @@
     "def high_rating(restaurant, rating):\n",
     "    if rating  > restaurant['rating']:\n",
     "        return True\n",
-    "    else:"
+    "    else:\n",
+    "        return F"
    ]
   },
   {
