--- a/index.ipynb
+++ b/index.ipynb
@@ -506,7 +506,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if rating  > restaurant['rating']:\n",
+    "    if rating  > restaurant['rating'] > rating:\n",
     "        return True\n",
     "    else:\n",
     "        return False"
