Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -501,12 +501,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if rating  > restaurant['rating'] > rating:\n",
+    "    if restaurant['rating'] > rating:\n",
     "        return True\n",
     "    else:\n",
     "        return False"
@@ -514,16 +514,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
